correct programm / no break on donate page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,7 @@
 @import "pages/single-category-project";
 @import "pages/our-team";
 @import "pages/404";
+@import "pages/program";
 /* PARTIALS */
 @import "partials/header";
 @import "partials/footer";
@@ -249,18 +250,6 @@
   padding: 10px;
   text-decoration: none;
   color: #3F81C4;
-  @media screen and (max-width: 520px) {
-    padding: 10px 40px 10px 44px;
-  }
-  @media screen and (max-width: 400px) {
-    padding: 10px 30px 10px 36px;
-  }
-  @media screen and (max-width: 340px) {
-    padding: 10px 22px 10px 28px;
-  }
-  @media screen and (max-width: 300px) {
-    padding: 10px 15px 10px 19px;
-  }
 }
 
 .programs_nav_icon {
@@ -294,10 +283,6 @@
   margin: 0;
   font-size: 16px;
   font-weight: 300;
-
-  @media screen and (max-width: 520px) {
-    display: none;
-  }
 }
 
 .programs_content {
